--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -221,7 +221,7 @@ redrow{
     height: 25px;
     /*width: 328px;
     height: 34px;*/
-    background-image: url(../images/login/logo2n.png);
+    background-image: url(../images/login/logo2n699.png);
     float: left;
 }
 
